--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,6 @@
-
+.sidenav{
+  max-width: 100px;
+}
 #container {
 ]  margin: auto !important;
   display: block;
@@ -76,12 +78,20 @@
 body {
   min-height: 700px;
   font-family: 'Montserrat';
+  background: linear-gradient(45deg, #DC2424, #4A569D);
+  width: 100%;
+  overflow-x: hidden;
+  height: calc(100% + 130px);
+  position: relative;
+  animation: pastelRainbow 20s ease infinite;
+  background-size: 400% 400%;
 
 }
-
+.card{
+  border-radius: 20px;
+}
 .reduceheight {
-  width: 300px;
-  height: 300px;
+  height: 250px;
   border-radius: 20px;
 
 }
